add precision and update swagger
