# api/app/src/routes/api/v1/stats.router.js
@@ -14,11 +14,11 @@ const router = new Router({
 
 class StatsRouter {
 
-  static async calculate(featureType, geometry, zoom, nocache=false, minDate=null, maxDate=null) {
+  static async calculate(featureType, geometry, zoom, nocache=false, minDate=null, maxDate=null, precision=13) {
 
     logger.debug('Obtaining tiles');
     const limits = {
-      min_zoom: 13,
+      min_zoom: precision,
       max_zoom: 13
     };
     const tiles = cover.tiles(geometry, limits);
@@ -53,13 +53,15 @@ class StatsRouter {
       return;
     }
 
+    const precision = ctx.query.precision && !isNaN(ctx.query.precision) ? parseInt(ctx.query.precision) : 13;
+
     const promises = [];
     if (ctx.params.featureType === 'all') {
-      promises.push(StatsRouter.calculate('buildings', geometry, null, ctx.query.nocache, minDate, maxDate));
-      promises.push(StatsRouter.calculate('highways', geometry, null, ctx.query.nocache, minDate, maxDate));
-      promises.push(StatsRouter.calculate('waterways', geometry, null, ctx.query.nocache, minDate, maxDate));
+      promises.push(StatsRouter.calculate('buildings', geometry, null, ctx.query.nocache, minDate, maxDate, precision));
+      promises.push(StatsRouter.calculate('highways', geometry, null, ctx.query.nocache, minDate, maxDate, precision));
+      promises.push(StatsRouter.calculate('waterways', geometry, null, ctx.query.nocache, minDate, maxDate, precision));
     } else {
-      promises.push(StatsRouter.calculate(ctx.params.featureType, geometry, null, ctx.query.nocache, minDate, maxDate));
+      promises.push(StatsRouter.calculate(ctx.params.featureType, geometry, null, ctx.query.nocache, minDate, maxDate, precision));
     }
 
     const partialResults = await Promise.all(promises);
@@ -106,13 +108,15 @@ class StatsRouter {
       return;
     }
 
+    const precision = ctx.query.precision && !isNaN(ctx.query.precision) ? parseInt(ctx.query.precision) : 13;
+
     const promises = [];
     if (ctx.params.featureType === 'all') {
-      promises.push(StatsRouter.calculate('buildings', geometry, null,  ctx.query.nocache, minDate, maxDate));
-      promises.push(StatsRouter.calculate('highways', geometry, null,  ctx.query.nocache, minDate, maxDate));
-      promises.push(StatsRouter.calculate('waterways', geometry, null, ctx.query.nocache, minDate, maxDate));
+      promises.push(StatsRouter.calculate('buildings', geometry, null,  ctx.query.nocache, minDate, maxDate, precision));
+      promises.push(StatsRouter.calculate('highways', geometry, null,  ctx.query.nocache, minDate, maxDate, precision));
+      promises.push(StatsRouter.calculate('waterways', geometry, null, ctx.query.nocache, minDate, maxDate, precision));
     } else {
-      promises.push(StatsRouter.calculate(ctx.params.featureType, geometry, 13,  ctx.query.nocache, minDate, maxDate));
+      promises.push(StatsRouter.calculate(ctx.params.featureType, geometry, 13,  ctx.query.nocache, minDate, maxDate, precision));
     }
 
     const partialResults = await Promise.all(promises);
@@ -151,13 +155,15 @@ class StatsRouter {
       return;
     }
 
+    const precision = ctx.query.precision && !isNaN(ctx.query.precision) ? parseInt(ctx.query.precision) : 13;
+
     const promises = [];
     if (ctx.params.featureType === 'all') {
-      promises.push(StatsRouter.calculate('buildings', feature.geometry, 13, ctx.query.nocache, minDate, maxDate));
-      promises.push(StatsRouter.calculate('highways', feature.geometry, 13, ctx.query.nocache, minDate, maxDate));
-      promises.push(StatsRouter.calculate('waterways', feature.geometry, 13, ctx.query.nocache, minDate, maxDate));
+      promises.push(StatsRouter.calculate('buildings', feature.geometry, 13, ctx.query.nocache, minDate, maxDate, precision));
+      promises.push(StatsRouter.calculate('highways', feature.geometry, 13, ctx.query.nocache, minDate, maxDate, precision));
+      promises.push(StatsRouter.calculate('waterways', feature.geometry, 13, ctx.query.nocache, minDate, maxDate, precision));
     } else {
-      promises.push(StatsRouter.calculate(ctx.params.featureType, feature.geometry, 13,  ctx.query.nocache, minDate, maxDate));
+      promises.push(StatsRouter.calculate(ctx.params.featureType, feature.geometry, 13,  ctx.query.nocache, minDate, maxDate, precision));
     }
 
     const partialResults = await Promise.all(promises);
