# api/doc/swagger.yml
@@ -181,6 +181,11 @@ paths:
         description: "Period of dates to filter data yyyy-MM-dd,yyyy-MM-dd"
         required: false
         type: "string"
+      - name: "precision"
+        in: "query"
+        description: "Maximum zoom value for calculate the needed tiles to obtain the data. Default: 13"
+        required: false
+        type: "integer"
       responses:
         200:
           description: "Successful operation"
@@ -208,6 +213,11 @@ paths:
         description: "Period of dates to filter data yyyy-MM-dd,yyyy-MM-dd"
         required: false
         type: "string"
+      - name: "precision"
+        in: "query"
+        description: "Maximum zoom value for calculate the needed tiles to obtain the data. Default: 13"
+        required: false
+        type: "integer"
       responses:
         200:
           description: "Successful operation"
@@ -235,6 +245,11 @@ paths:
         description: "Period of dates to filter data yyyy-MM-dd,yyyy-MM-dd"
         required: false
         type: "string"
+      - name: "precision"
+        in: "query"
+        description: "Maximum zoom value for calculate the needed tiles to obtain the data. Default: 13"
+        required: false
+        type: "integer"
       responses:
         200:
           description: "Successful operation"
@@ -383,22 +398,6 @@ definitions:
         type: "integer"
         format: "float"
         description: Mean experience for the feature
-      users_length:
-        type: "integer"
-        format: "int32"
-        description: Total number of users
-      top_percentage:
-        type: "integer"
-        format: "float"
-        description: Percentage of the total represented by the first 100 users
-      total_feature_value:
-        type: "integer"
-        format: "float"
-        description: Total sum of all feature_value of all users
-      top_users:
-        type: "array"
-        items:
-          $ref: "#/definitions/TopUser"
       activity_count:
         type: "array"
         items:
@@ -407,10 +406,6 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/Experience"
-      activity_users:
-        type: "array"
-        items:
-          $ref: "#/definitions/ActivityUsers"
   Stats:
     type: "object"
     properties:
